# zk-toolkit

./: Cargo.toml  README.md
src/: affine_add_ops.rs  bullet_proofs.rs  curve.rs  ec.rs  ec_point.rs  ecdsa.rs  ed25519_sha512.rs  elliptic_curve.rs  field.rs  field_elem.rs  hash.rs  hasher.rs  hmac.rs  jacobian_add_ops.rs  lib.rs  random_number.rs  sha.rs  sha256.rs  sha512 copy.rs  sha512.rs  sha_common.rs  to_biguint.rs  vector_ops.rs  weierstrass_add_ops.rs  weierstrass_ec.rs  weierstrass_eq.rs
src/_old/elliptic_curve/: curve_equation.rs  ec_point.rs
src/building_block/: additive_identity.rs  ec_additive_group_ops.rs  ec_cyclic_additive_group.rs  ec_point.rs  ecdsa.rs  ed25519_sha512.rs  elliptic_curve.rs  field.rs  hmac.rs  mod.rs  random_number.rs  sha256.rs  sha512.rs  to_bigint.rs  to_biguint.rs  vector_ops.rs  weierstrass_add_ops.rs  weierstrass_eq.rs  zero.rs
src/building_block/bls12_381/: additional_ops.rs  extension_tower.rs  fq1.rs  fq12.rs  fq2.rs  fq6.rs  fq_test_helper.rs  g1_point.rs  g2_point.rs  mod.rs  setup.rs  test.md  test_fq.hs
src/building_block/curves/: macros.rs  mod.rs  rational_point.rs  weierstrass_eq.rs
src/building_block/elliptic_curve/: affine_point.rs  curve.rs  curve_equation.rs  (+8 more)
src/no_trusted_setup_zk/: bulletproofs.rs
src/other_zk/: bulletproofs.rs  mod.rs
src/snarks/: arith_circuit.rs  calculator.rs  constraint.rs  equation_parser.rs  gate.rs  language.rs  math_expr_parser.rs  matrix.rs  mod.rs  polynomial.rs  qap.rs  r1cs.rs  r1cs_tmpl.rs  sparse_matrix.rs  sparse_vec.rs  term.rs  weil_pairing.rs
src/zk/: mod.rs
(+186 files in other folders)
