[package]
name = "zk_toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1"
hex = "0.4.3"
nom = "7.1.1"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2"
once_cell = "1.18.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
mcl_rust = { git = "https://github.com/herumi/mcl-rust.git" }
